--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/navigation_history"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/history_ic"
         android:title="history" />
 
 </menu>
