--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,280 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="324dp"
+        android:layout_marginLeft="324dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="520dp" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginLeft="224dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="520dp" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="324dp"
+        android:layout_marginLeft="324dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="399dp" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginLeft="224dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="399dp" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="520dp" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="399dp" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="520dp" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/icon_1"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="276dp" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/icon_39"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="399dp" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="324dp"
+        android:layout_marginLeft="324dp"
+        android:src="@drawable/icon_4"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="276dp" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:src="@drawable/icon2"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="276dp" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:paddingBottom="20dp"
+        android:background="@android:color/holo_red_dark">
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="46dp"
+            android:src="@drawable/icon_18"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="6dp"
+            tools:layout_editor_absoluteY="2dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0963-843-444"
+            android:textColor="#C2D5D3"
+            tools:layout_editor_absoluteX="50dp"
+            tools:layout_editor_absoluteY="29dp" />
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="46dp"
+            android:src="@drawable/icon_16"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="373dp"
+            tools:layout_editor_absoluteY="2dp" />
+
+        <ImageView
+            android:layout_width="52dp"
+            android:layout_height="62dp"
+            android:src="@drawable/icon_20"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="313dp"
+            tools:layout_editor_absoluteY="63dp" />
+
+        <ImageView
+            android:layout_width="52dp"
+            android:layout_height="62dp"
+            android:src="@drawable/icon_15"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="53dp"
+            tools:layout_editor_absoluteY="63dp" />
+
+        <ImageView
+            android:layout_width="52dp"
+            android:layout_height="62dp"
+            android:src="@drawable/icon_17"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="142dp"
+            tools:layout_editor_absoluteY="63dp" />
+
+        <ImageView
+            android:layout_width="52dp"
+            android:layout_height="62dp"
+            android:src="@drawable/icon_19"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="225dp"
+            tools:layout_editor_absoluteY="63dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rút tiền"
+            android:textColor="#C2D5D3"
+            tools:layout_editor_absoluteX="225dp"
+            tools:layout_editor_absoluteY="134dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nhận tiền"
+            android:textColor="#C2D5D3"
+            tools:layout_editor_absoluteX="139dp"
+            tools:layout_editor_absoluteY="134dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chuyển tiền"
+            android:textColor="#C2D5D3"
+            tools:layout_editor_absoluteX="43dp"
+            tools:layout_editor_absoluteY="134dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Liên kết thẻ"
+            android:textColor="#C2D5D3"
+            tools:layout_editor_absoluteX="304dp"
+            tools:layout_editor_absoluteY="134dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:background="#FFFFFF">
+
+    </FrameLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="home"/>
+        android:text="Xem số dư"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="228dp" />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tài khoản ViettelPay"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="198dp" />
+
+    <ImageView
+        android:layout_width="26dp"
+        android:layout_height="32dp"
+        android:src="@drawable/icon_21"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="157dp"
+        tools:layout_editor_absoluteY="223dp" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="37dp"
+        android:src="@drawable/icon_39"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="322dp"
+        tools:layout_editor_absoluteY="209dp" />
+
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginLeft="224dp"
+        android:src="@drawable/icon_3"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="276dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
