update page 2 border/text

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,6 +28,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:src="@drawable/icon_13"
+                android:padding="2dp"
+                android:background="@drawable/icon_border"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView14" />
 
@@ -38,6 +40,8 @@
                 android:layout_marginTop="52dp"
                 android:layout_marginEnd="28dp"
                 android:layout_marginRight="24dp"
+                android:background="@drawable/icon_border"
+                android:padding="2dp"
                 android:src="@drawable/icon_35"
                 app:layout_constraintEnd_toStartOf="@+id/imageView16"
                 app:layout_constraintTop_toBottomOf="@+id/imageView13" />
@@ -50,6 +54,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:src="@drawable/icon_8"
+                android:padding="2dp"
+                android:background="@drawable/icon_border"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView8"
                 tools:ignore="MissingConstraints" />
@@ -62,6 +68,8 @@
                 android:layout_marginEnd="28dp"
                 android:layout_marginRight="28dp"
                 android:src="@drawable/icon_7"
+                android:padding="2dp"
+                android:background="@drawable/icon_border"
                 app:layout_constraintEnd_toStartOf="@+id/imageView14"
                 app:layout_constraintTop_toBottomOf="@+id/imageView17"
                 tools:ignore="MissingConstraints" />
@@ -73,6 +81,8 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="52dp"
+                android:background="@drawable/icon_border"
+                android:padding="2dp"
                 android:src="@drawable/icon_12"
                 app:layout_constraintStart_toEndOf="@+id/imageView10"
                 app:layout_constraintTop_toBottomOf="@+id/imageView12"
@@ -85,6 +95,8 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="52dp"
+                android:padding="2dp"
+                android:background="@drawable/icon_border"
                 android:src="@drawable/icon_6"
                 app:layout_constraintStart_toEndOf="@+id/imageView7"
                 app:layout_constraintTop_toBottomOf="@+id/imageView9"
@@ -97,6 +109,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="52dp"
+                android:background="@drawable/icon_border"
+                android:padding="2dp"
                 android:src="@drawable/icon_10"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView7"
@@ -110,6 +124,8 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="102dp"
                 android:src="@drawable/icon_1"
+                android:padding="2dp"
+                android:background="@drawable/icon_border"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
@@ -120,6 +136,8 @@
                 android:layout_height="70dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
+                android:background="@drawable/icon_border"
+                android:padding="2dp"
                 android:layout_marginTop="52dp"
                 android:src="@drawable/icon_5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,8 +150,10 @@
                 android:layout_height="70dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="16dp"
+                android:padding="2dp"
                 android:layout_marginRight="16dp"
                 android:src="@drawable/icon_4"
+                android:background="@drawable/icon_border"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
@@ -145,7 +165,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="102dp"
+                android:padding="2dp"
                 android:src="@drawable/icon2"
+                android:background="@drawable/icon_border"
                 app:layout_constraintStart_toEndOf="@+id/imageView6"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
@@ -357,8 +379,11 @@
                 android:layout_height="70dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="28dp"
+                android:padding="2dp"
                 android:layout_marginRight="28dp"
                 android:src="@drawable/icon_3"
+                android:background="@drawable/icon_border"
+                
                 app:layout_constraintEnd_toStartOf="@+id/imageView8"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
