--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -2,16 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="horizontal"
     android:padding="10dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon"
         android:layout_width="30dp"
-        tools:src="@drawable/icon_39"
-        android:layout_height="30dp" />
+        android:layout_height="30dp"
+        tools:src="@drawable/icon_39" />
 
     <LinearLayout
         android:id="@+id/content_layout"
@@ -80,8 +83,8 @@
                 android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#6C6D77"
-                android:text="Thành công" />
+                android:text="Thành công"
+                android:textColor="#6C6D77" />
         </LinearLayout>
     </LinearLayout>
 
