--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
 
     <style name="DealDetailValue">
         <item name="android:textSize">18dp</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textColor">#132245</item>
+        <item name="android:textAlignment">textEnd</item>
     </style>
 </resources>
