Setup Bottom navigation

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -250,7 +250,7 @@
                     android:layout_marginStart="37dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginTop="60dp"
-                    android:src="@drawable/icon_17"
+                    android:src="@drawable/ic_qr"
                     app:layout_constraintStart_toEndOf="@+id/imageView2"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="MissingConstraints" />
