--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,36 @@
     <FrameLayout
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_above="@+id/bottom_navigation_bar"
-        android:layout_below="@+id/header"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_gravity="bottom"
-        android:id="@+id/bottom_navigation_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:itemIconTint="@color/color_tab"
-        app:itemTextColor="@color/color_tab"
-        app:labelVisibilityMode="selected"
-        app:menu="@menu/bottom_navigation" />
+        android:layout_height="wrap_content">
 
+        <clone.vtpay.view.CustomBottomNavigation
+            android:id="@+id/bottom_navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:itemBackground="@null"
+            android:background="?android:attr/windowBackground"
+            app:itemIconTint="@color/color_tab"
+            app:itemTextColor="@color/color_tab"
+            app:labelVisibilityMode="labeled"
+            app:menu="@menu/bottom_navigation">
+        </clone.vtpay.view.CustomBottomNavigation>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/ic_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="18dp"
+            app:backgroundTint="#D20428"
+            android:src="@drawable/ic_qr"
+            app:elevation="10dp" />
+    </FrameLayout>
 
 </LinearLayout>
