--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,17 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@mipmap/ic_launcher"
-        android:title="home" />
+        android:icon="@drawable/ic_home"
+        android:title="Trang chủ" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@mipmap/ic_launcher"
-        android:title="xxx" />
+        android:id="@+id/navigation_scan"
+        android:title="Quét mã" />
 
     <item
         android:id="@+id/navigation_history"
         android:icon="@drawable/history_ic"
-        android:title="history" />
+        android:title="Lịch sử" />
 
 </menu>
